# tempo

./: .buildinfo  .coverage  .coveragerc  .gitignore  BACKWARDS_COMPATIBILITY_PLAN.md  BREAKING_CHANGES.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  NOTICE  README.md  Tempo QuickStart - Python.ipynb  Tempo QuickStart - Scala.scala  contributing.html  coverage.xml  future-roadmap.html  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.py  tempo-team.html  tempo_quickstart.dbc  user-guide.html
.aider.tags.cache.v4/: cache.db
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build-release.yml  ci.yml  codeql-analysis.yml  dist-releasae.yml  dist-release.yml  docs-release.yml  (+6 more)
_modules/: index.html
_static/: documentation_options.js
about/: contributing.html  future-roadmap.html  tempo-team.html  user-guide.html
datasource/: deltasource.py  optimized_df.py  refdata.py
docs/: conf.py  future-roadmap.rst  index.rst  requirements.txt  tempo-team.rst  user-guide.rst
examples/: TimeSeries Split Cross-Validation.py  dlt_tempo.py  financial_services_quickstart.py
htmlcov/: index.html  status.json  tempo___init___py.html  tempo_io_py.html  tempo_resample_py.html  tempo_tsdf_py.html
python/: .blackignore  .build-constraints.txt  .coveragerc  .env.versions  .flake8  ASOF_JOIN_ENHANCEMENTS.md  CIRCULAR_DEPENDENCY_REFACTOR.md  MERGE_PREPARATION_SUMMARY.md  Makefile  PR_DESCRIPTION.md  README.md  install_cmd.txt  large_cols_as_of_debug.py  libversioner.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  version.py
python/dbl_tempo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/docs/proposals/: resampled-tsdf-intermediate.md
python/python/tempo/intervals/overlap/: resolution.py
python/python/tests/intervals/core/: intervals_df_tests.py
python/python/tests/intervals/metrics/: operations_tests.py
python/requirements/: dbr104.txt  dbr104_arm64.txt  dbr113.txt  dbr122.txt  dbr133.txt  dbr143.txt  dbr154.txt  dbr91.txt  dev.txt  docs.txt
python/requirements/dbr104/: .gitignore  dbr104.txt  dbr104_arm.txt  install_non_dev_dependencies.sh  set_install_command.sh
python/tempo/: __init__.py  _deprecation.py  ad.py  as_of_join.py  interpol.py  intervals.py  io.py  ml.py  resample.py  resample_result.py  resample_utils.py  resampled.py  stats.py  timeunit.py  tsdf.py  tsdf_asof_join_integration.py  tsdf_asof_join_patch.py  tsschema.py  typing.py  utils.py
python/tempo/intervals/: __init__.py
python/tempo/intervals/core/: boundaries.py  exceptions.py  interval.py  intervals_df.py  types.py  utils.py  validation.py
python/tempo/intervals/datetime/: utils.py
python/tempo/intervals/metrics/: merger.py  operations.py  strategies.py
python/tempo/intervals/overlap/: detection.py  resolution.py  transformer.py  types.py
python/tempo/intervals/spark/: functions.py
python/tempo/joins/: __init__.py  strategies.py  strategies.py.bak
python/tests/: ad.yaml  as_of_join_tests.py  base.py  delta_writer_tests.py  ffill_data.csv  interpol_test.py  interpol_tests.py  intervals_tests.py  io_tests.py  ml_tests.py  pandas_baseline.py  resample_2_tests.py  resample_tests.py  stats_tests.py  tests.py  tsdf_basic_methods_tests.py  tsdf_dataframe_wrapper_tests.py  tsdf_deprecation_tests.py  tsdf_factory_methods_tests.py  tsdf_stats_union_tests.py  tsdf_tests.py  tsdf_time_filtering_tests.py  tsschema_tests.py  utils_tests.py
python/tests/intervals/core/: boundaries_tests.py  interval_tests.py  intervals_df_tests.py  utils_tests.py  validation_tests.py
python/tests/intervals/datetime/: utils_tests.py
python/tests/intervals/metrics/: merger_tests.py  operations_tests.py  strategies_tests.py
python/tests/intervals/overlap/: detection_tests.py  resolution_tests.py  transformer_tests.py  types_tests.py
python/tests/intervals/spark/: functions_tests.py
python/tests/join/: as_of_join_tests.py  helper_functions_tests.py  skew_asof_joiner_tests.py  strategies_error_handling_tests.py  strategies_integration_tests.py  test_as_of_join.py  test_skew_asof_joiner.py  test_strategies.py  test_strategies_integration.py  test_tsdf_asof_join.py  timezone_regression_tests.py  tsdf_asof_join_tests.py
python/tests/joins/: as_of_join_tests.py  edge_cases_coverage_tests.py  helper_functions_tests.py  skew_asof_joiner_tests.py  strategies_additional_coverage_tests.py  strategies_error_handling_tests.py  strategies_integration_tests.py  strategies_tests.py  test_strategy_consistency.py  timezone_regression_tests.py  tsdf_asof_join_tests.py
python/tests/requirements/: dbr104.txt  dbr113.txt  dbr122.txt  dbr133.txt  dbr142.txt  dbr91.txt  dev.txt
python/tests/unit_test_data/: as_of_join_tests.json  common.json  delta_writer_tests.json  interpol_tests.json  intervals_df_tests.json  intervals_tests.json  io_tests.json  json-fixer.ipynb  ml_tests.json  resample_2_tests.json  resample_tests.json  resample_tests_2.json  stats_tests.json  trades.csv  tsdf_basic_methods_tests.json  tsdf_dataframe_wrapper_tests.json  tsdf_stats_union_tests.json  tsdf_tests.json  tsdf_time_filtering_tests.json  tsschema_tests.json  unit_test_data_config.json  utils_tests.json
python/tests/unit_test_data/intervals/core/: intervals_df_tests.json
python/tests/unit_test_data/join/: as_of_join_tests.json  strategies_integration.json  test_strategies_integration.json
python/tests/unit_test_data/joins/: skew_asof_joiner_tests.json  strategies_integration_tests.json
python/tox_helpers/: get_latest_dbr_env.sh
reference/: index.html  tempo.interpol.html  tempo.intervals.html  tempo.io.html  tempo.resample.html  tempo.tsdf.html  tempo.utils.html
references/: api-reference.html  intervals.html  tsdf.html
tca/: base.py
tca.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tempo/: __init__.py  base.py  io.py  resample.py  tsdf.py
tempo.egg-info/: PKG-INFO  SOURCES.txt
tests/: .coverage  tests.py
utils/: time.py
(+142 files in other folders)
