[build-system]
requires = [
    "hatchling~=1.30.1"
]
build-backend = "hatchling.build"

[project]
name = "dbl-tempo"
dynamic = ["version"]
description = 'Tempo is timeseries manipulation for Spark. This project builds upon the capabilities of PySpark to provide a suite of abstractions and functions that make operations on timeseries data easier and highly scalable.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Lorin Dawson", email = "lorin.dawson@databricks.com" },
  { name = "Kevin Wang", email = "k.wang@databricks.com" },
  { name = "Hector Bustamante", email = "hector.bustamante@databricks.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.version]
source = "code"
path = "./version.py"

[project.urls]
Documentation = "https://databrickslabs.github.io/tempo/"
Issues = "https://github.com/databrickslabs/tempo/issues"
Source = "https://github.com/databrickslabs/tempo"

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735)
#
# These replace the former Hatch environments. They are development-only and
# are NOT part of the published package (the package itself has no runtime
# dependencies; PySpark/Delta are provided by the Databricks Runtime).
#
# The `test` group pins the Spark stack to the latest supported LTS runtime
# (DBR 15.4: PySpark 3.5 / Python 3.11). Tempo previously ran a matrix that
# pinned a different Spark/numpy/pandas set per DBR (11.3 -> 15.4). A single
# `uv.lock` cannot cryptographically pin several conflicting Spark versions
# without scattering per-Python markers across the groups, which fights uv's
# universal-lock model and the supply-chain lockdown's "one verified set"
# intent. We therefore lock to the latest LTS and keep breadth via the
# Python-version matrix (3.9-3.11) in CI. See CONTRIBUTING.md.
# ---------------------------------------------------------------------------
[dependency-groups]
test = [
  "chispa>=0.10,<1",
  "coverage>=7,<8",
  "jsonref>=1,<2",
  "packaging>=24,<27",
  "python-dateutil>=2,<3",
  "delta-spark~=3.2.0",
  "ipython~=8.15.0",
  "numpy~=1.23.5",
  "pandas>=1.5.3,<2.4.0",
  "pyarrow~=14.0.1",
  "pyspark~=3.5.0",
  "scipy~=1.11.1",
]
lint = [
  "black==24.4.1",
  "flake8",
]
type-check = [
  "mypy>=1,<2",
  "pandas-stubs>=2,<3",
  "numpy",
  "types-openpyxl",
]
docs = [
  "sphinx",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-panels",
  "furo",
]
# Used only by `make lock-dependencies` to read build-system.requires (provides `tomlq`).
yq = [
  "yq",
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "type-check" },
  { include-group = "docs" },
]

[tool.uv]
# Pin the version of uv in use; must match the version installed in CI.
required-version = "~= 0.11.0"
# The test stack targets the latest LTS (PySpark 3.5), whose wheels only cover
# CPython 3.9-3.11. Constrain universal resolution to that range so the lock
# stays solvable (PySpark 3.5 publishes no 3.12+ wheels).
environments = [
  "python_version >= '3.9' and python_version < '3.12'",
]

[tool.hatch.build.targets.wheel]
packages = ["tempo"]

[tool.hatch.build.targets.sdist]
include = [
    "/tempo",
    "/tests",
    "/README.md",
    "/pyproject.toml",
    "/version.py"
]
exclude = [
    "/.venv*",
    "/.tox",
    "/.mypy_cache",
    "/.pytest_cache",
    "/__pycache__",
    "*.pyc",
    "*.pyo",
    "*.egg-info",
    "/dist",
    "/build",
    "/htmlcov",
    "/.coverage*",
    "/coverage.xml"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
